# pen-order-dictionary-python

./: app.py  fy.json  pyproject.toml  readme.md  word.json  word.txt
