[tool.poetry]
name = "pen-order-dictionary-python"
version = "0.1.0"
description = ""
authors = ["cxzlw <wsc_zds@qq.com>"]
readme = "README.md"
packages = [{include = "pen_order_dictionary_python"}]

[tool.poetry.dependencies]
python = "^3.9"
sanic = "^22.12.0"
ujson = "^5.7.0"
sanic-ext = "^22.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

